運営団体名の統一と白背景タイトルの視認性改善

--- a/faq.html
+++ b/faq.html
@@ -214,6 +214,12 @@
             color: var(--text-primary);
         }
 
+        /* ダーク背景のセクション用の白いタイトル */
+        .section-title.white {
+            color: white;
+            text-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+        }
+
         .section-subtitle {
             font-size: 1.125rem;
             color: var(--text-secondary);
@@ -521,7 +527,7 @@
     <!-- FAQ Section -->
     <section class="faq-section">
         <div class="faq-container">
-            <h2 class="section-title">よくある質問</h2>
+            <h2 class="section-title white">よくある質問</h2>
             <p class="section-subtitle">高校企業部の導入や運営に関する質問をカテゴリ別にまとめています</p>
             
             <!-- FAQ Categories -->
