--- a/media.html
+++ b/media.html
@@ -150,6 +150,12 @@
             color: var(--text-primary);
         }
 
+        /* ダーク背景のセクション用の白いタイトル */
+        .section-title.white {
+            color: white;
+            text-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+        }
+
         .section-subtitle {
             font-size: 1.125rem;
             color: var(--text-secondary);
@@ -366,7 +372,7 @@
     <!-- Media Coverage Section -->
     <section class="section">
         <div class="container">
-            <h2 class="section-title">メディア掲載一覧</h2>
+            <h2 class="section-title white">メディア掲載一覧</h2>
             <p class="section-subtitle">新聞、テレビ、雑誌、オンラインメディアで取り上げていただいた記事をご紹介します</p>
             
             <div class="media-grid">
@@ -424,7 +430,7 @@
     <!-- Stats Section -->
     <section class="section stats-section">
         <div class="container">
-            <h2 class="section-title">メディア掲載統計</h2>
+            <h2 class="section-title white">メディア掲載統計</h2>
             <p class="section-subtitle">2023年からのメディア掲載実績</p>
             
             <div class="stats-grid">
