--- a/programs.html
+++ b/programs.html
@@ -207,9 +207,15 @@
         .section-title {
             font-size: 2.5rem;
             font-weight: 700;
-            margin-bottom: 1rem;
+            margin-bottom: 2rem;
             text-align: center;
             color: var(--text-primary);
+        }
+
+        /* ダーク背景のセクション用の白いタイトル */
+        .section-title.white {
+            color: white;
+            text-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
         }
 
         .section-subtitle {
@@ -494,7 +500,7 @@
     <!-- Programs Section -->
     <section class="programs-section">
         <div class="programs-container">
-            <h2 class="section-title">実践的なビジネスプログラム</h2>
+            <h2 class="section-title white">実践的なビジネスプログラム</h2>
             <p class="section-subtitle">部活動として取り組む3つの実践的プログラムで、生徒の成長を支援します。</p>
             
             <div class="program-grid">
