--- a/mentor-register.html
+++ b/mentor-register.html
@@ -214,6 +214,12 @@
             color: var(--text-primary);
         }
 
+        /* ダーク背景のセクション用の白いタイトル */
+        .section-title.white {
+            color: white;
+            text-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+        }
+
         .section-subtitle {
             font-size: 1.125rem;
             color: var(--text-secondary);
@@ -480,7 +486,7 @@
     <!-- Benefits Section -->
     <section class="benefits-section">
         <div class="benefits-container">
-            <h2 class="section-title">メンターになるメリット</h2>
+            <h2 class="section-title white">メンターになるメリット</h2>
             <p class="section-subtitle">高校生の成長をサポートしながら、あなた自身も成長できる機会を提供します</p>
             
             <div class="benefits-grid">
@@ -526,7 +532,7 @@
     <!-- Form Section -->
     <section class="form-section">
         <div class="form-container">
-            <h2 class="section-title">メンター登録フォーム</h2>
+            <h2 class="section-title white">メンター登録フォーム</h2>
             <p class="section-subtitle">以下のフォームに必要事項をご記入の上、お申し込みください</p>
             
             <div class="form-card">
