--- a/organization.html
+++ b/organization.html
@@ -214,6 +214,12 @@
             color: var(--text-primary);
         }
 
+        /* ダーク背景のセクション用の白いタイトル */
+        .section-title.white {
+            color: white;
+            text-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+        }
+
         .section-subtitle {
             font-size: 1.125rem;
             color: var(--text-secondary);
@@ -529,7 +535,7 @@
     <!-- Organization Section -->
     <section class="organization-section">
         <div class="organization-container">
-            <h2 class="section-title">私たちの理念</h2>
+            <h2 class="section-title white">私たちの理念</h2>
             <p class="section-subtitle">高校生の未来を創造し、地域社会の発展に貢献することを使命としています</p>
             
             <div class="mission-vision">
@@ -551,7 +557,7 @@
     <!-- Team Section -->
     <section class="team-section">
         <div class="team-container">
-            <h2 class="section-title">運営チーム</h2>
+            <h2 class="section-title white">運営チーム</h2>
             <p class="section-subtitle">教育とビジネスの両分野で豊富な経験を持つ専門家が、高校企業部の運営を支えています</p>
             
             <div class="team-grid">
