--- a/process.html
+++ b/process.html
@@ -696,6 +696,20 @@
                 padding: 1.5rem;
             }
         }
+
+        .section-title {
+            font-size: 2.5rem;
+            font-weight: 700;
+            margin-bottom: 2rem;
+            text-align: center;
+            color: var(--text-primary);
+        }
+
+        /* ダーク背景のセクション用の白いタイトル */
+        .section-title.white {
+            color: white;
+            text-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+        }
     </style>
 </head>
 <body>
@@ -728,7 +742,7 @@
     <!-- Process Section -->
     <section class="process-section">
         <div class="process-container">
-            <h2 class="section-title">導入までの5つのステップ</h2>
+            <h2 class="section-title white">導入までの5つのステップ</h2>
             <p class="section-subtitle">学校の特色や地域特性を活かした最適な部活動プランを設計し、スムーズな導入を実現します。</p>
             
             <div class="process-steps">
@@ -828,7 +842,7 @@
     <!-- Timeline Section -->
     <section class="timeline-section">
         <div class="timeline-container">
-            <h2 class="section-title">導入スケジュール</h2>
+            <h2 class="section-title white">導入スケジュール</h2>
             <p class="section-subtitle">個別相談から部活動開始まで、通常2-3ヶ月で完了します。</p>
             
             <div class="timeline">
