高校企業部を高校起業部に修正

--- a/cases.html
+++ b/cases.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>導入事例・実績 | 一般社団法人高校企業部</title>
+    <title>導入事例・実績 | 一般社団法人高校起業部</title>
     <style>
         * {
             margin: 0;
@@ -380,7 +380,7 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav-container">
-            <a href="index.html" class="logo">高校企業部</a>
+            <a href="index.html" class="logo">高校起業部</a>
             <ul class="nav-menu">
                 <li><a href="index.html#problem">教育課題</a></li>
                 <li><a href="index.html#solution">部活動効果</a></li>
@@ -502,7 +502,7 @@
             <div class="footer-section">
                 <h3>部活動について</h3>
                 <ul>
-                    <li><a href="about.html">高校企業部とは</a></li>
+                    <li><a href="about.html">高校起業部とは</a></li>
                     <li><a href="process.html">部活動導入の流れ</a></li>
                     <li><a href="faq.html">よくある質問</a></li>
                     <li><a href="organization.html">運営団体について</a></li>
@@ -533,7 +533,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 一般社団法人高校企業部. All rights reserved.</p>
+            <p>&copy; 2024 一般社団法人高校起業部. All rights reserved.</p>
         </div>
     </footer>
 
