--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>お問い合わせ | 一般社団法人高校企業部</title>
+    <title>お問い合わせ | 一般社団法人高校起業部</title>
     <style>
         * {
             margin: 0;
@@ -408,7 +408,7 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav-container">
-            <a href="index.html" class="logo">高校企業部</a>
+            <a href="index.html" class="logo">高校起業部</a>
             <ul class="nav-menu">
                 <li><a href="index.html#problem">教育課題</a></li>
                 <li><a href="index.html#solution">部活動効果</a></li>
@@ -425,7 +425,7 @@
     <section class="hero">
         <div class="container">
             <h1>お問い合わせ</h1>
-            <p>高校企業部の導入について、お気軽にお問い合わせください</p>
+            <p>高校起業部の導入について、お気軽にお問い合わせください</p>
         </div>
     </section>
 
@@ -554,7 +554,7 @@
             <div class="footer-section">
                 <h3>部活動について</h3>
                 <ul>
-                    <li><a href="about.html">高校企業部とは</a></li>
+                    <li><a href="about.html">高校起業部とは</a></li>
                     <li><a href="process.html">部活動導入の流れ</a></li>
                     <li><a href="faq.html">よくある質問</a></li>
                     <li><a href="organization.html">運営団体について</a></li>
@@ -585,7 +585,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 一般社団法人高校企業部. All rights reserved.</p>
+            <p>&copy; 2024 一般社団法人高校起業部. All rights reserved.</p>
         </div>
     </footer>
 
