--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>よくある質問 | 一般社団法人高校企業部</title>
+    <title>よくある質問 | 一般社団法人高校起業部</title>
     <style>
         * {
             margin: 0;
@@ -502,9 +502,9 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav-container">
-            <a href="index.html" class="logo">高校企業部</a>
+            <a href="index.html" class="logo">高校起業部</a>
             <ul class="nav-menu">
-                <li><a href="about.html">高校企業部とは</a></li>
+                <li><a href="about.html">高校起業部とは</a></li>
                 <li><a href="programs.html">教育プログラム</a></li>
                 <li><a href="cases.html">導入事例</a></li>
                 <li><a href="process.html">導入の流れ</a></li>
@@ -519,7 +519,7 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1>よくある質問</h1>
-                <p class="subtitle">高校企業部に関するよくある質問にお答えします</p>
+                <p class="subtitle">高校起業部に関するよくある質問にお答えします</p>
             </div>
         </div>
     </section>
@@ -528,7 +528,7 @@
     <section class="faq-section">
         <div class="faq-container">
             <h2 class="section-title white">よくある質問</h2>
-            <p class="section-subtitle">高校企業部の導入や運営に関する質問をカテゴリ別にまとめています</p>
+            <p class="section-subtitle">高校起業部の導入や運営に関する質問をカテゴリ別にまとめています</p>
             
             <!-- FAQ Categories -->
             <div class="faq-categories">
@@ -542,12 +542,12 @@
             <div class="faq-category active" id="general">
                 <div class="faq-item">
                     <div class="faq-question">
-                        <span>高校企業部とは何ですか？</span>
+                        <span>高校起業部とは何ですか？</span>
                         <div class="faq-toggle">+</div>
                     </div>
                     <div class="faq-answer">
                         <div class="faq-answer-content">
-                            高校企業部は、高校生が実際の企業と連携してビジネスを学ぶ部活動です。地域の企業が抱える課題を解決するプロジェクトを通じて、実践的なビジネススキルを身につけることができます。
+                            高校起業部は、高校生が実際の企業と連携してビジネスを学ぶ部活動です。地域の企業が抱える課題を解決するプロジェクトを通じて、実践的なビジネススキルを身につけることができます。
                         </div>
                     </div>
                 </div>
@@ -637,7 +637,7 @@
                     </div>
                     <div class="faq-answer">
                         <div class="faq-answer-content">
-                            はい、大丈夫です。高校企業部では、ビジネスの基礎から丁寧に学べるカリキュラムを用意しています。経験豊富なメンターがサポートしますので、初心者でも安心して参加できます。
+                            はい、大丈夫です。高校起業部では、ビジネスの基礎から丁寧に学べるカリキュラムを用意しています。経験豊富なメンターがサポートしますので、初心者でも安心して参加できます。
                         </div>
                     </div>
                 </div>
@@ -726,7 +726,7 @@
             <div class="footer-section">
                 <h3>部活動について</h3>
                 <ul>
-                    <li><a href="about.html">高校企業部とは</a></li>
+                    <li><a href="about.html">高校起業部とは</a></li>
                     <li><a href="process.html">部活動導入の流れ</a></li>
                     <li><a href="faq.html">よくある質問</a></li>
                     <li><a href="organization.html">運営団体について</a></li>
@@ -757,7 +757,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 一般社団法人高校企業部. All rights reserved.</p>
+            <p>&copy; 2024 一般社団法人高校起業部. All rights reserved.</p>
         </div>
     </footer>
 
