--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>一般社団法人高校企業部 | 高校生が本気で稼ぐ。地域が本気で応援する。</title>
+    <title>一般社団法人高校起業部 | 高校生が本気で稼ぐ。地域が本気で応援する。</title>
     <style>
         * {
             margin: 0;
@@ -1336,7 +1336,7 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav-container">
-            <a href="#" class="logo">高校企業部</a>
+            <a href="#" class="logo">高校起業部</a>
             <ul class="nav-menu">
                 <li><a href="#problem">教育課題</a></li>
                 <li><a href="#solution">部活動効果</a></li>
@@ -1443,7 +1443,7 @@
     <!-- Solution Section -->
     <section class="solution-section" id="solution">
         <div class="solution-container">
-            <h2 class="section-title white">部活動として導入する<br>高校企業部の効果</h2>
+            <h2 class="section-title white">部活動として導入する<br>高校起業部の効果</h2>
             <p class="section-subtitle">従来の部活動では得られない、実践的なビジネススキルと人生経験を提供します。</p>
             
             <div class="solution-grid">
@@ -1596,7 +1596,7 @@
                 <div class="process-step fade-in">
                     <div class="process-number">5</div>
                     <h3>部活動開始</h3>
-                    <p>高校企業部として正式に部活動をスタートし、生徒の実践的なビジネス教育を開始します。</p>
+                    <p>高校起業部として正式に部活動をスタートし、生徒の実践的なビジネス教育を開始します。</p>
                 </div>
             </div>
         </div>
@@ -1715,7 +1715,7 @@
         <div class="cta-container">
             <div class="urgency-badge">📢 2024年度導入校募集中（先着10校限定）</div>
             <h2 class="cta-title">生徒の可能性を最大化しませんか？</h2>
-            <p class="cta-text">部活動として高校企業部を導入し、生徒の実践力向上と地域活性化を同時に実現。<br>まずは個別相談で、あなたの学校に最適なプランをご提案いたします。</p>
+            <p class="cta-text">部活動として高校起業部を導入し、生徒の実践力向上と地域活性化を同時に実現。<br>まずは個別相談で、あなたの学校に最適なプランをご提案いたします。</p>
             <div class="cta-buttons">
                 <a href="contact.html" class="cta-btn primary">個別相談に申し込む（無料）</a>
                 <a href="contact.html" class="cta-btn secondary">詳細資料をダウンロード</a>
@@ -1729,7 +1729,7 @@
             <div class="footer-section">
                 <h3>部活動について</h3>
                 <ul>
-                    <li><a href="about.html">高校企業部とは</a></li>
+                    <li><a href="about.html">高校起業部とは</a></li>
                     <li><a href="process.html">部活動導入の流れ</a></li>
                     <li><a href="faq.html">よくある質問</a></li>
                     <li><a href="organization.html">運営団体について</a></li>
@@ -1760,7 +1760,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 一般社団法人高校企業部. All rights reserved.</p>
+            <p>&copy; 2024 一般社団法人高校起業部. All rights reserved.</p>
         </div>
     </footer>
 
