--- a/media.html
+++ b/media.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>メディア掲載実績 | 一般社団法人高校企業部</title>
+    <title>メディア掲載実績 | 一般社団法人高校起業部</title>
     <style>
         * {
             margin: 0;
@@ -348,7 +348,7 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav-container">
-            <a href="index.html" class="logo">高校企業部</a>
+            <a href="index.html" class="logo">高校起業部</a>
             <ul class="nav-menu">
                 <li><a href="index.html#problem">教育課題</a></li>
                 <li><a href="index.html#solution">部活動効果</a></li>
@@ -365,7 +365,7 @@
     <section class="hero">
         <div class="container">
             <h1>メディア掲載実績</h1>
-            <p>高校企業部の取り組みが様々なメディアで紹介されています</p>
+            <p>高校起業部の取り組みが様々なメディアで紹介されています</p>
         </div>
     </section>
 
@@ -380,7 +380,7 @@
                     <span class="media-type newspaper">新聞</span>
                     <h3 class="media-title">読売新聞</h3>
                     <div class="media-date">2024年3月15日</div>
-                    <p class="media-description">「高校生が部活動で起業体験 地域企業と連携し実践的なビジネス教育を推進」として、高校企業部の取り組みが紹介されました。</p>
+                    <p class="media-description">「高校生が部活動で起業体験 地域企業と連携し実践的なビジネス教育を推進」として、高校起業部の取り組みが紹介されました。</p>
                     <a href="#" class="media-link">記事を読む →</a>
                 </div>
                 
@@ -396,7 +396,7 @@
                     <span class="media-type magazine">雑誌</span>
                     <h3 class="media-title">教育新聞</h3>
                     <div class="media-date">2024年1月20日</div>
-                    <p class="media-description">「実践的なビジネス教育の新潮流 高校企業部の可能性」として、教育関係者向けの専門誌で紹介されました。</p>
+                    <p class="media-description">「実践的なビジネス教育の新潮流 高校起業部の可能性」として、教育関係者向けの専門誌で紹介されました。</p>
                     <a href="#" class="media-link">記事を読む →</a>
                 </div>
                 
@@ -460,7 +460,7 @@
             <div class="footer-section">
                 <h3>部活動について</h3>
                 <ul>
-                    <li><a href="about.html">高校企業部とは</a></li>
+                    <li><a href="about.html">高校起業部とは</a></li>
                     <li><a href="process.html">部活動導入の流れ</a></li>
                     <li><a href="faq.html">よくある質問</a></li>
                     <li><a href="organization.html">運営団体について</a></li>
@@ -491,7 +491,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 一般社団法人高校企業部. All rights reserved.</p>
+            <p>&copy; 2024 一般社団法人高校起業部. All rights reserved.</p>
         </div>
     </footer>
 
