--- a/mentor-register.html
+++ b/mentor-register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>メンター登録 | 一般社団法人高校企業部</title>
+    <title>メンター登録 | 一般社団法人高校起業部</title>
     <style>
         * {
             margin: 0;
@@ -461,9 +461,9 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav-container">
-            <a href="index.html" class="logo">高校企業部</a>
+            <a href="index.html" class="logo">高校起業部</a>
             <ul class="nav-menu">
-                <li><a href="about.html">高校企業部とは</a></li>
+                <li><a href="about.html">高校起業部とは</a></li>
                 <li><a href="programs.html">教育プログラム</a></li>
                 <li><a href="cases.html">導入事例</a></li>
                 <li><a href="process.html">導入の流れ</a></li>
@@ -614,7 +614,7 @@
 
                     <div class="form-group">
                         <label class="form-label">メンターとして期待すること</label>
-                        <textarea class="form-textarea" name="expectations" placeholder="高校企業部のメンターとしてどのような活動をしたいか、期待することなどをお聞かせください"></textarea>
+                        <textarea class="form-textarea" name="expectations" placeholder="高校起業部のメンターとしてどのような活動をしたいか、期待することなどをお聞かせください"></textarea>
                     </div>
 
                     <div class="form-group">
@@ -634,7 +634,7 @@
             <div class="footer-section">
                 <h3>部活動について</h3>
                 <ul>
-                    <li><a href="about.html">高校企業部とは</a></li>
+                    <li><a href="about.html">高校起業部とは</a></li>
                     <li><a href="process.html">部活動導入の流れ</a></li>
                     <li><a href="faq.html">よくある質問</a></li>
                     <li><a href="organization.html">運営団体について</a></li>
@@ -665,7 +665,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 一般社団法人高校企業部. All rights reserved.</p>
+            <p>&copy; 2024 一般社団法人高校起業部. All rights reserved.</p>
         </div>
     </footer>
 
