--- a/organization.html
+++ b/organization.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>運営団体について | 一般社団法人高校企業部</title>
+    <title>運営団体について | 一般社団法人高校起業部</title>
     <style>
         * {
             margin: 0;
@@ -510,9 +510,9 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav-container">
-            <a href="index.html" class="logo">高校企業部</a>
+            <a href="index.html" class="logo">高校起業部</a>
             <ul class="nav-menu">
-                <li><a href="about.html">高校企業部とは</a></li>
+                <li><a href="about.html">高校起業部とは</a></li>
                 <li><a href="programs.html">教育プログラム</a></li>
                 <li><a href="cases.html">導入事例</a></li>
                 <li><a href="process.html">導入の流れ</a></li>
@@ -527,7 +527,7 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1>運営団体について</h1>
-                <p class="subtitle">一般社団法人高校企業部の理念と使命、そして私たちのチームをご紹介します</p>
+                <p class="subtitle">一般社団法人高校起業部の理念と使命、そして私たちのチームをご紹介します</p>
             </div>
         </div>
     </section>
@@ -558,7 +558,7 @@
     <section class="team-section">
         <div class="team-container">
             <h2 class="section-title white">運営チーム</h2>
-            <p class="section-subtitle">教育とビジネスの両分野で豊富な経験を持つ専門家が、高校企業部の運営を支えています</p>
+            <p class="section-subtitle">教育とビジネスの両分野で豊富な経験を持つ専門家が、高校起業部の運営を支えています</p>
             
             <div class="team-grid">
                 <div class="team-member">
@@ -589,7 +589,7 @@
     <section class="values-section">
         <div class="values-container">
             <h2 class="section-title">私たちの価値観</h2>
-            <p class="section-subtitle">高校企業部の活動を支える5つの価値観</p>
+            <p class="section-subtitle">高校起業部の活動を支える5つの価値観</p>
             
             <div class="values-grid">
                 <div class="value-card">
@@ -631,7 +631,7 @@
             <div class="footer-section">
                 <h3>部活動について</h3>
                 <ul>
-                    <li><a href="about.html">高校企業部とは</a></li>
+                    <li><a href="about.html">高校起業部とは</a></li>
                     <li><a href="process.html">部活動導入の流れ</a></li>
                     <li><a href="faq.html">よくある質問</a></li>
                     <li><a href="organization.html">運営団体について</a></li>
@@ -666,7 +666,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 一般社団法人高校企業部. All rights reserved.</p>
+            <p>&copy; 2024 一般社団法人高校起業部. All rights reserved.</p>
         </div>
     </footer>
 
