--- a/process.html
+++ b/process.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>部活動導入の流れ | 一般社団法人高校企業部</title>
+    <title>部活動導入の流れ | 一般社団法人高校起業部</title>
     <style>
         * {
             margin: 0;
@@ -716,7 +716,7 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav-container">
-            <a href="index.html" class="logo">高校企業部</a>
+            <a href="index.html" class="logo">高校起業部</a>
             <ul class="nav-menu">
                 <li><a href="index.html#problem">教育課題</a></li>
                 <li><a href="index.html#solution">部活動効果</a></li>
@@ -822,7 +822,7 @@
                     <div class="step-content">
                         <div class="step-number">5</div>
                         <h3 class="step-title">部活動開始</h3>
-                        <p class="step-description">高校企業部として正式に部活動をスタートし、生徒の実践的なビジネス教育を開始します。</p>
+                        <p class="step-description">高校起業部として正式に部活動をスタートし、生徒の実践的なビジネス教育を開始します。</p>
                         <ul class="step-details">
                             <li>部活動の正式開始</li>
                             <li>生徒へのオリエンテーション</li>
@@ -873,7 +873,7 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3 class="timeline-title">第9-12週：部活動開始</h3>
-                        <p class="timeline-description">高校企業部として正式に活動を開始します。</p>
+                        <p class="timeline-description">高校起業部として正式に活動を開始します。</p>
                     </div>
                     <div class="timeline-dot"></div>
                 </div>
@@ -887,7 +887,7 @@
             <div class="footer-section">
                 <h3>部活動について</h3>
                 <ul>
-                    <li><a href="about.html">高校企業部とは</a></li>
+                    <li><a href="about.html">高校起業部とは</a></li>
                     <li><a href="process.html">部活動導入の流れ</a></li>
                     <li><a href="faq.html">よくある質問</a></li>
                     <li><a href="organization.html">運営団体について</a></li>
@@ -918,7 +918,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 一般社団法人高校企業部. All rights reserved.</p>
+            <p>&copy; 2024 一般社団法人高校起業部. All rights reserved.</p>
         </div>
     </footer>
 
