--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>高校企業部とは | 一般社団法人高校企業部</title>
+    <title>高校起業部とは | 一般社団法人高校起業部</title>
     <style>
         * {
             margin: 0;
@@ -478,7 +478,7 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav-container">
-            <a href="index.html" class="logo">高校企業部</a>
+            <a href="index.html" class="logo">高校起業部</a>
             <ul class="nav-menu">
                 <li><a href="index.html#problem">教育課題</a></li>
                 <li><a href="index.html#solution">部活動効果</a></li>
@@ -495,7 +495,7 @@
     <section class="hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h1>高校企業部とは</h1>
+                <h1>高校起業部とは</h1>
                 <p class="subtitle">高校生の実践的なビジネス教育を推進する一般社団法人</p>
             </div>
         </div>
@@ -620,7 +620,7 @@
             <div class="footer-section">
                 <h3>部活動について</h3>
                 <ul>
-                    <li><a href="about.html">高校企業部とは</a></li>
+                    <li><a href="about.html">高校起業部とは</a></li>
                     <li><a href="process.html">部活動導入の流れ</a></li>
                     <li><a href="faq.html">よくある質問</a></li>
                     <li><a href="organization.html">運営団体について</a></li>
@@ -651,7 +651,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 一般社団法人高校企業部. All rights reserved.</p>
+            <p>&copy; 2024 一般社団法人高校起業部. All rights reserved.</p>
         </div>
     </footer>
 
