白背景でwhiteクラスのタイトルを黒系に修正

--- a/faq.html
+++ b/faq.html
@@ -527,7 +527,7 @@
     <!-- FAQ Section -->
     <section class="faq-section">
         <div class="faq-container">
-            <h2 class="section-title white">よくある質問</h2>
+            <h2 class="section-title">よくある質問</h2>
             <p class="section-subtitle">高校起業部の導入や運営に関する質問をカテゴリ別にまとめています</p>
             
             <!-- FAQ Categories -->
