--- a/process.html
+++ b/process.html
@@ -742,7 +742,7 @@
     <!-- Process Section -->
     <section class="process-section">
         <div class="process-container">
-            <h2 class="section-title white">導入までの5つのステップ</h2>
+            <h2 class="section-title">導入までの5つのステップ</h2>
             <p class="section-subtitle">学校の特色や地域特性を活かした最適な部活動プランを設計し、スムーズな導入を実現します。</p>
             
             <div class="process-steps">
@@ -842,7 +842,7 @@
     <!-- Timeline Section -->
     <section class="timeline-section">
         <div class="timeline-container">
-            <h2 class="section-title white">導入スケジュール</h2>
+            <h2 class="section-title">導入スケジュール</h2>
             <p class="section-subtitle">個別相談から部活動開始まで、通常2-3ヶ月で完了します。</p>
             
             <div class="timeline">
