--- a/programs.html
+++ b/programs.html
@@ -500,7 +500,7 @@
     <!-- Programs Section -->
     <section class="programs-section">
         <div class="programs-container">
-            <h2 class="section-title white">実践的なビジネスプログラム</h2>
+            <h2 class="section-title">実践的なビジネスプログラム</h2>
             <p class="section-subtitle">部活動として取り組む3つの実践的プログラムで、生徒の成長を支援します。</p>
             
             <div class="program-grid">
