--- a/contact.html
+++ b/contact.html
@@ -432,7 +432,7 @@
     <!-- Contact Options Section -->
     <section class="section">
         <div class="container">
-            <h2 class="section-title white">お問い合わせ方法</h2>
+            <h2 class="section-title">お問い合わせ方法</h2>
             <p class="section-subtitle">ご希望に応じて、最適な方法でサポートいたします</p>
             
             <div class="contact-options">
@@ -463,7 +463,7 @@
     <!-- Consultation Form Section -->
     <section class="section" id="consultation-form" style="background: var(--surface-light);">
         <div class="container">
-            <h2 class="section-title white">個別相談申し込み</h2>
+            <h2 class="section-title">個別相談申し込み</h2>
             <p class="section-subtitle">学校の特色に合わせた最適なプランをご提案いたします</p>
             
             <div class="form-container">
